<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar_layout"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/titulo"
            android:layout_width="289dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="25sp" />


        <Button
            android:id="@+id/button_play"
            android:layout_width="289dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="5dp"
            android:text="@string/app_play" />

        <Button
            android:id="@+id/button_newPlayer"
            android:layout_width="289dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="5dp"
            android:text="@string/app_newPlayer" />


        <Button
            android:id="@+id/button_preferencies"
            android:layout_width="289dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="5dp"
            android:text="@string/app_preferencie" />

        <Button
            android:id="@+id/button_about"
            android:layout_width="289dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="5dp"
            android:text="@string/app_about" />

    </LinearLayout>

</LinearLayout>
